--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 node_modules/
-.env
 uploads/
+.env
+.env.local
+.env.production
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+coverage/
+.nyc_output/
+temp/
+tmp/
