--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "contactrecorderbackend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "3.0.0",
+  "description": "21 Век - Backend для системы записи разговоров",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": ["audio", "recording", "transcription", "21vek"],
+  "author": "21 Век",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
