--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-openai-whisper==20231117
-torch>=1.10.0
-torchaudio>=0.10.0
-ffmpeg-python>=0.2.0
-numpy>=1.21.0 
+openai-whisper
+torch
+torchaudio
+ffmpeg-python
+numpy 
