--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,40 @@
+# Dependencies
 node_modules/
-uploads/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment
 .env
 .env.local
-.env.production
+.env.*.local
+
+# Build
+dist/
+build/
+
+# Logs
+logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.DS_Store
-.vscode/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Directory for uploaded files
+uploads/
+
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
-coverage/
-.nyc_output/
-temp/
-tmp/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Railway
+.railway/
