--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contactrecorderbackend",
-  "version": "3.0.0",
+  "version": "3.0.3",
   "description": "21 Век - Backend для системы записи разговоров",
   "main": "src/server.js",
   "scripts": {
@@ -17,13 +17,13 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "openai": "^5.1.1",
     "path": "^0.12.7",
     "pg": "^8.16.0",
