--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 whisperx
-torch>=1.12.0
-torchaudio>=0.12.0
+torch>=1.12.0,<2.0.0
+torchaudio>=0.12.0,<2.0.0
 ffmpeg-python
 numpy
-pyannote.audio==3.1.1
-speechbrain>=0.5.0
 transformers>=4.21.0
-accelerate
 librosa
 soundfile 
