--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,14 @@ torch>=1.12.0,<2.0.0
 torchaudio>=0.12.0,<2.0.0
 ffmpeg-python
 numpy
+pyannote.audio==3.1.1
+speechbrain>=0.5.0
 transformers>=4.21.0
+accelerate
 librosa
-soundfile 
+soundfile
+# Дополнительные зависимости для стабильной работы диаризации
+huggingface_hub
+datasets
+omegaconf
+hydra-core 
